completed permit data jupyter notebook

--- a/Notebooks/clean_combine_data_dan.ipynb
+++ b/Notebooks/clean_combine_data_dan.ipynb
@@ -170,17 +170,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Zip Code</th>\n",
+       "      <th>Size of adjusted gross income</th>\n",
+       "      <th>Number of returns</th>\n",
+       "      <th>Real Estates</th>\n",
+       "      <th>Mortgage</th>\n",
+       "      <th>Charity</th>\n",
+       "      <th>Taxable income</th>\n",
+       "      <th>Income tax</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2011-01-01</th>\n",
+       "      <td>75001.0</td>\n",
+       "      <td>$1 under $25,000</td>\n",
+       "      <td>2644</td>\n",
+       "      <td>562</td>\n",
+       "      <td>729</td>\n",
+       "      <td>254</td>\n",
+       "      <td>9908</td>\n",
+       "      <td>831</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-01-01</th>\n",
+       "      <td>75001.0</td>\n",
+       "      <td>$25,000 under $50,000</td>\n",
+       "      <td>2442</td>\n",
+       "      <td>812</td>\n",
+       "      <td>1223</td>\n",
+       "      <td>668</td>\n",
+       "      <td>56677</td>\n",
+       "      <td>6578</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-01-01</th>\n",
+       "      <td>75001.0</td>\n",
+       "      <td>$50,000 under $75,000</td>\n",
+       "      <td>1426</td>\n",
+       "      <td>1264</td>\n",
+       "      <td>2460</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>65105</td>\n",
+       "      <td>9919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-01-01</th>\n",
+       "      <td>75001.0</td>\n",
+       "      <td>$75,000 under $100,000</td>\n",
+       "      <td>720</td>\n",
+       "      <td>1139</td>\n",
+       "      <td>1757</td>\n",
+       "      <td>837</td>\n",
+       "      <td>49204</td>\n",
+       "      <td>8525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-01-01</th>\n",
+       "      <td>75001.0</td>\n",
+       "      <td>$100,000 under $200,000</td>\n",
+       "      <td>938</td>\n",
+       "      <td>2903</td>\n",
+       "      <td>4518</td>\n",
+       "      <td>2176</td>\n",
+       "      <td>104054</td>\n",
+       "      <td>20648</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Zip Code Size of adjusted gross income Number of returns  \\\n",
+       "date                                                                   \n",
+       "2011-01-01   75001.0              $1 under $25,000              2644   \n",
+       "2011-01-01   75001.0         $25,000 under $50,000              2442   \n",
+       "2011-01-01   75001.0         $50,000 under $75,000              1426   \n",
+       "2011-01-01   75001.0        $75,000 under $100,000               720   \n",
+       "2011-01-01   75001.0       $100,000 under $200,000               938   \n",
+       "\n",
+       "           Real Estates Mortgage Charity Taxable income Income tax  \n",
+       "date                                                                \n",
+       "2011-01-01          562      729     254           9908        831  \n",
+       "2011-01-01          812     1223     668          56677       6578  \n",
+       "2011-01-01         1264     2460    1003          65105       9919  \n",
+       "2011-01-01         1139     1757     837          49204       8525  \n",
+       "2011-01-01         2903     4518    2176         104054      20648  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Vu's tax csv import code here\n",
-    "#Zip Code,Size of adjusted gross income,Number of returns,Real Estate Taxes,Home mortgage interest paid,Total charitable contributions,Taxable income,Income tax"
+    "#Zip Code,Size of adjusted gross income,Number of returns,Real Estate Taxes,Home mortgage interest paid,Total charitable contributions,Taxable income,Income tax\n",
+    "\n",
+    "# Read in the construction permits data\n",
+    "tax_filepath = Path(\"../resources/Vu/Tax_Data/cleaned_tax_FINAL.csv\")\n",
+    "\n",
+    "tax_df = pd.read_csv(tax_filepath, index_col='date', infer_datetime_format=True)\n",
+    "\n",
+    "tax_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -213,35 +345,105 @@
        "      <th>taxable_income</th>\n",
        "      <th>income_tax</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2011-01-01</th>\n",
+       "      <td>75001.0</td>\n",
+       "      <td>$1 under $25,000</td>\n",
+       "      <td>2644</td>\n",
+       "      <td>562</td>\n",
+       "      <td>729</td>\n",
+       "      <td>254</td>\n",
+       "      <td>9908</td>\n",
+       "      <td>831</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-01-01</th>\n",
+       "      <td>75001.0</td>\n",
+       "      <td>$25,000 under $50,000</td>\n",
+       "      <td>2442</td>\n",
+       "      <td>812</td>\n",
+       "      <td>1223</td>\n",
+       "      <td>668</td>\n",
+       "      <td>56677</td>\n",
+       "      <td>6578</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-01-01</th>\n",
+       "      <td>75001.0</td>\n",
+       "      <td>$50,000 under $75,000</td>\n",
+       "      <td>1426</td>\n",
+       "      <td>1264</td>\n",
+       "      <td>2460</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>65105</td>\n",
+       "      <td>9919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-01-01</th>\n",
+       "      <td>75001.0</td>\n",
+       "      <td>$75,000 under $100,000</td>\n",
+       "      <td>720</td>\n",
+       "      <td>1139</td>\n",
+       "      <td>1757</td>\n",
+       "      <td>837</td>\n",
+       "      <td>49204</td>\n",
+       "      <td>8525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-01-01</th>\n",
+       "      <td>75001.0</td>\n",
+       "      <td>$100,000 under $200,000</td>\n",
+       "      <td>938</td>\n",
+       "      <td>2903</td>\n",
+       "      <td>4518</td>\n",
+       "      <td>2176</td>\n",
+       "      <td>104054</td>\n",
+       "      <td>20648</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     zip_code size_adjusted_gross_income num_returns real_estate_taxes  \\\n",
-       "date      NaN                        NaN         NaN               NaN   \n",
+       "            zip_code size_adjusted_gross_income num_returns real_estate_taxes  \\\n",
+       "date                                                                            \n",
+       "2011-01-01   75001.0           $1 under $25,000        2644               562   \n",
+       "2011-01-01   75001.0      $25,000 under $50,000        2442               812   \n",
+       "2011-01-01   75001.0      $50,000 under $75,000        1426              1264   \n",
+       "2011-01-01   75001.0     $75,000 under $100,000         720              1139   \n",
+       "2011-01-01   75001.0    $100,000 under $200,000         938              2903   \n",
        "\n",
-       "     home_mortgage_interest_paid total_charitable_contributions  \\\n",
-       "date                         NaN                            NaN   \n",
+       "           home_mortgage_interest_paid total_charitable_contributions  \\\n",
+       "date                                                                    \n",
+       "2011-01-01                         729                            254   \n",
+       "2011-01-01                        1223                            668   \n",
+       "2011-01-01                        2460                           1003   \n",
+       "2011-01-01                        1757                            837   \n",
+       "2011-01-01                        4518                           2176   \n",
        "\n",
-       "     taxable_income income_tax  \n",
-       "date            NaN        NaN  "
+       "           taxable_income income_tax  \n",
+       "date                                  \n",
+       "2011-01-01           9908        831  \n",
+       "2011-01-01          56677       6578  \n",
+       "2011-01-01          65105       9919  \n",
+       "2011-01-01          49204       8525  \n",
+       "2011-01-01         104054      20648  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,22 +453,22 @@
     "# insert complete code\n",
     "#\n",
     "# staging data frame (replace with actual code above)\n",
-    "tax_columns = [\n",
-    "    #'date',\n",
-    "    'Zip Code', \n",
-    "    'Size of adjusted gross income',\n",
-    "    'Number of returns',\n",
-    "    'Real Estate Taxes',\n",
-    "    'Home mortgage interest paid',\n",
-    "    'Total charitable contributions',\n",
-    "    'Taxable income',\n",
-    "    'Income tax'\n",
-    "    ]\n",
+    "# tax_columns = [\n",
+    "#     #'date',\n",
+    "#     'Zip Code', \n",
+    "#     'Size of adjusted gross income',\n",
+    "#     'Number of returns',\n",
+    "#     'Real Estate Taxes',\n",
+    "#     'Home mortgage interest paid',\n",
+    "#     'Total charitable contributions',\n",
+    "#     'Taxable income',\n",
+    "#     'Income tax'\n",
+    "#     ]\n",
     "\n",
-    "tax_data_df = pd.DataFrame(index=['date'], columns=tax_columns)\n",
+    "# tax_df = pd.DataFrame(index=['date'], columns=tax_columns)\n",
     "\n",
     "# rename columns to match other data set columns\n",
-    "tax_data_df.columns = ['zip_code',\n",
+    "tax_df.columns = ['zip_code',\n",
     "                       'size_adjusted_gross_income',\n",
     "                       'num_returns',\n",
     "                       'real_estate_taxes',\n",
@@ -274,7 +476,7 @@
     "                       'total_charitable_contributions',\n",
     "                       'taxable_income',\n",
     "                       'income_tax']\n",
-    "tax_data_df.head()"
+    "tax_df.head()"
    ]
   },
   {
@@ -430,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -442,14 +644,14 @@
        "       'median_listing_price_per_square_feet', 'median_square_feet',\n",
        "       'average_listing_price', 'total_listing_count', 'pending_ratio',\n",
        "       'pct_price_change', 'pct_price_sqft', 'pct_price_sqft_change',\n",
-       "       'zip_code', 'size_adjusted_gross_income', 'num_returns',\n",
-       "       'real_estate_taxes', 'home_mortgage_interest_paid',\n",
-       "       'total_charitable_contributions', 'taxable_income', 'income_tax',\n",
-       "       'zip_code', 'permit_type', 'permit_count', 'land_use'],\n",
+       "       'size_adjusted_gross_income', 'num_returns', 'real_estate_taxes',\n",
+       "       'home_mortgage_interest_paid', 'total_charitable_contributions',\n",
+       "       'taxable_income', 'income_tax', 'permit_type', 'permit_count',\n",
+       "       'land_use'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,11 +661,13 @@
     "dataset = [\n",
     "    pricing_data_df,\n",
     "    # add additional datasets here,\n",
-    "    tax_data_df,\n",
+    "    tax_df,\n",
     "    permits_df\n",
     "]\n",
     "\n",
-    "combined_df = pd.concat(dataset, axis=\"columns\", join=\"inner\")\n",
+    "# combined_df = pd.concat(dataset, levels=['date','zip_code'], axis=\"columns\", join=\"inner\")\n",
+    "combined_df = pd.merge(pricing_data_df, tax_df)\n",
+    "combined_df = pd.merge(combined_df, permits_df)\n",
     "\n",
     "combined_df.columns"
    ]
