--- a/Notebooks/Copy_Code_Vu.ipynb
+++ b/Notebooks/Copy_Code_Vu.ipynb
@@ -2181,11 +2181,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tax dataframe creation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# clean_path = Path(\"../resources/Vu/Tax_Data/cleaned_tax_FINALs.csv\")\n",
+    "# clean_tax = pd.read_csv(clean_path)\n",
+    "# clean_tax = clean_tax.rename({'Zip Code': 'zip_code'}, axis=1)\n",
+    "# clean_tax.drop(columns = \"Size of adjusted gross income\", inplace = True)\n",
+    "# multi_index_tax = clean_tax.groupby([\"zip_code\", \"date\"]).sum()\n",
+    "# number_of_returns_df = pd.pivot_table(multi_index_tax, index = \"date\", values = \"Number of returns\", columns = \"zip_code\")\n",
+    "# taxable_income_df = pd.pivot_table(multi_index_tax, index = \"date\", values = \"Taxable income\", columns = \"zip_code\")\n",
+    "# income_tax_df = pd.pivot_table(multi_index_tax, index = \"date\", values = \"Income tax\", columns = \"zip_code\")\n",
+    "# mortgage_tax_df = pd.pivot_table(multi_index_tax, index = \"date\", values = \"Mortgage\", columns = \"zip_code\")\n",
+    "# charity_tax_df = pd.pivot_table(multi_index_tax, index = \"date\", values = \"Charity\", columns = \"zip_code\")\n",
+    "# real_estates_tax_df = pd.pivot_table(multi_index_tax, index = \"date\", values = \"Real Estates\", columns = \"zip_code\")"
+   ]
   }
  ],
  "metadata": {
