permit data update: remove dupl. rows

--- a/Notebooks/houston_permit_data.ipynb
+++ b/Notebooks/houston_permit_data.ipynb
@@ -1104,123 +1104,123 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2017-01</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-01</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-02</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-02</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-03</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-04</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-05</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>...</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1230,27 +1230,27 @@
       "text/plain": [
        "zip_code  77002  77003  77004  77005  77006  77007  77008  77009  77010  \\\n",
        "date                                                                      \n",
-       "2017-01     1.0    NaN    3.0    NaN    3.0    4.0    7.0    NaN    NaN   \n",
-       "2017-01     1.0    NaN    8.0    NaN    1.0    8.0    3.0    1.0    NaN   \n",
-       "2017-02     1.0    NaN    6.0    NaN    1.0    1.0    NaN    NaN    NaN   \n",
-       "2017-02     NaN    2.0    3.0    NaN    NaN    3.0    2.0    1.0    NaN   \n",
-       "2017-03     1.0    2.0    3.0    NaN    1.0    3.0    5.0    2.0    NaN   \n",
+       "2017-01     2.0    0.0   11.0    0.0    4.0   12.0   10.0    1.0    0.0   \n",
+       "2017-02     1.0    2.0    9.0    0.0    1.0    4.0    2.0    1.0    0.0   \n",
+       "2017-03     1.0    3.0    5.0    1.0    2.0    5.0   14.0    8.0    0.0   \n",
+       "2017-04     0.0    1.0    1.0    2.0    2.0    9.0   12.0    8.0    0.0   \n",
+       "2017-05     1.0    3.0    6.0    0.0    4.0   12.0   11.0    5.0    0.0   \n",
        "\n",
        "zip_code  77011  ...  77484  77489  77493  77494  77498  77530  77532  77545  \\\n",
        "date             ...                                                           \n",
-       "2017-01     NaN  ...    1.0    NaN    7.0    NaN    2.0    NaN    NaN    2.0   \n",
-       "2017-01     NaN  ...    NaN    NaN    8.0    1.0    2.0    NaN    NaN    1.0   \n",
-       "2017-02     NaN  ...    NaN    NaN    4.0    1.0    1.0    2.0    5.0    1.0   \n",
-       "2017-02     NaN  ...    1.0    NaN    3.0    NaN    1.0    NaN    NaN    NaN   \n",
-       "2017-03     2.0  ...    1.0    NaN    2.0    1.0    1.0    1.0    NaN    1.0   \n",
+       "2017-01     0.0  ...    1.0    0.0   15.0    1.0    4.0    0.0    0.0    3.0   \n",
+       "2017-02     0.0  ...    1.0    0.0    7.0    1.0    2.0    2.0    5.0    1.0   \n",
+       "2017-03     2.0  ...    3.0    0.0    8.0    2.0    1.0    1.0    2.0    2.0   \n",
+       "2017-04     0.0  ...    0.0    0.0   10.0    3.0    3.0    0.0    1.0    2.0   \n",
+       "2017-05     2.0  ...    1.0    0.0    7.0    6.0    1.0    0.0    0.0    0.0   \n",
        "\n",
        "zip_code  77546  77598  \n",
        "date                    \n",
-       "2017-01     NaN    NaN  \n",
-       "2017-01     1.0    NaN  \n",
+       "2017-01     1.0    0.0  \n",
        "2017-02     1.0    1.0  \n",
-       "2017-02     NaN    NaN  \n",
-       "2017-03     NaN    NaN  \n",
+       "2017-03     0.0    0.0  \n",
+       "2017-04     3.0    0.0  \n",
+       "2017-05     0.0    0.0  \n",
        "\n",
        "[5 rows x 133 columns]"
       ]
@@ -1261,12 +1261,11 @@
     }
    ],
    "source": [
-    "#consolidate index of weekly data into year-month and sum per month\n",
-    "permits_by_zip.groupby([permits_by_zip.index.year, permits_by_zip.index.month]).sum()\n",
-    "\n",
-    "# reset multi-index (year and month) to a year-month single index format\n",
+    "# set date index to a year-month format\n",
     "permits_by_zip.index = permits_by_zip.index.to_period('M')\n",
     "\n",
+    "# re-groupby index to merge duplicate year-month rows.\n",
+    "permits_by_zip = permits_by_zip.groupby(permits_by_zip.index).sum()\n",
     "\n",
     "# preview dataframe\n",
     "permits_by_zip.head()"
@@ -1348,121 +1347,121 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2017-01</th>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>11</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
        "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-01</th>\n",
+       "      <td>15</td>\n",
        "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
-       "      <td>8</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-02</th>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-02</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-03</th>\n",
        "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>14</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-04</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
        "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-05</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11</td>\n",
+       "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1474,27 +1473,27 @@
       "text/plain": [
        "zip_code  77002  77003  77004  77005  77006  77007  77008  77009  77010  \\\n",
        "date                                                                      \n",
-       "2017-01       1      0      3      0      3      4      7      0      0   \n",
-       "2017-01       1      0      8      0      1      8      3      1      0   \n",
-       "2017-02       1      0      6      0      1      1      0      0      0   \n",
-       "2017-02       0      2      3      0      0      3      2      1      0   \n",
-       "2017-03       1      2      3      0      1      3      5      2      0   \n",
+       "2017-01       2      0     11      0      4     12     10      1      0   \n",
+       "2017-02       1      2      9      0      1      4      2      1      0   \n",
+       "2017-03       1      3      5      1      2      5     14      8      0   \n",
+       "2017-04       0      1      1      2      2      9     12      8      0   \n",
+       "2017-05       1      3      6      0      4     12     11      5      0   \n",
        "\n",
        "zip_code  77011  ...  77484  77489  77493  77494  77498  77530  77532  77545  \\\n",
        "date             ...                                                           \n",
-       "2017-01       0  ...      1      0      7      0      2      0      0      2   \n",
-       "2017-01       0  ...      0      0      8      1      2      0      0      1   \n",
-       "2017-02       0  ...      0      0      4      1      1      2      5      1   \n",
-       "2017-02       0  ...      1      0      3      0      1      0      0      0   \n",
-       "2017-03       2  ...      1      0      2      1      1      1      0      1   \n",
+       "2017-01       0  ...      1      0     15      1      4      0      0      3   \n",
+       "2017-02       0  ...      1      0      7      1      2      2      5      1   \n",
+       "2017-03       2  ...      3      0      8      2      1      1      2      2   \n",
+       "2017-04       0  ...      0      0     10      3      3      0      1      2   \n",
+       "2017-05       2  ...      1      0      7      6      1      0      0      0   \n",
        "\n",
        "zip_code  77546  77598  \n",
        "date                    \n",
-       "2017-01       0      0  \n",
        "2017-01       1      0  \n",
        "2017-02       1      1  \n",
-       "2017-02       0      0  \n",
        "2017-03       0      0  \n",
+       "2017-04       3      0  \n",
+       "2017-05       0      0  \n",
        "\n",
        "[5 rows x 133 columns]"
       ]
